# cnn_qt

./: README.md  automaton.py  cnn_qt.ipynb  config.yaml  generate.py  main.py  metrics.json  pyproject.toml  requirements.txt
outputs/2026-03-31/23-18-44/.hydra/: config.yaml  hydra.yaml
src/: data.py  evaluate.py  model.py  quantize.py  train.py  visualize.py
